--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "ladda",
-  "version": "0.9.2",
+  "name": "ladda-commonjs",
+  "version": "0.9.3",
   "main": ["./dist/ladda.min.js"],
   "dependencies": {
     "spin.js": "1.3.x"
